vault/network-policies/vault-secrets-webhook-network-policy.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: vault-secrets-webhook-network-policy
  namespace: vault-operator
spec:
  selector: app.kubernetes.io/name == 'vault-secrets-webhook'
  types:
  - Egress
  
  egress:
  # Allow access to all containers with annotations
  - action: Allow
    protocol: TCP
    destination:
      nets:
      - 0.0.0.0/0
      ports: [443]
